# RNRidableGpsTracker

./: .gitignore  README.md  RNRidableGpsTracker.podspec  package.json  react-native-ridable-gps-tracker.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle
android-example/: README.md  build.gradle  gradlew  settings.gradle
android-example/app/: build.gradle
android-example/app/src/main/: AndroidManifest.xml
android-example/app/src/main/kotlin/com/gpstrackerexample/: LocationService.kt  MainActivity.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnridablegpstracker/: LocationService.kt  NativeRidableGpsTrackerSpec.kt  RNRidableGpsTrackerModule.kt  RNRidableGpsTrackerPackage.kt
ios/: RNRidableGpsTracker.h  RNRidableGpsTracker.m  RNRidableGpsTracker.mm  RNRidableGpsTracker.swift  RNRidableGpsTrackerSpec.h  RNRidableGpsTrackerSpec.mm
ios-example/: Podfile  README.md  create_project.rb  project.yml  setup_project.sh
ios-example/GPSTrackerExample/: Info.plist  SceneDelegate.swift  ViewController.swift
ios-example/GPSTrackerExample.xcodeproj/: project.pbxproj
ios-example/GPSTrackerExample.xcodeproj/project.xcworkspace/xcuserdata/mike.xcuserdatad/: UserInterfaceState.xcuserstate
ios-example/GPSTrackerExample.xcodeproj/xcuserdata/mike.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-example/GPSTrackerExample.xcworkspace/: contents.xcworkspacedata
ios-example/GPSTrackerExample.xcworkspace/xcuserdata/mike.xcuserdatad/: UserInterfaceState.xcuserstate
src/: NativeRidableGpsTracker.ts  index.ts  types.ts
